Inmob-Salesforce/force-app/main/default/objects/Lote__c/Lote__c.object-meta.xml
<CustomObject>
    <label>Inmueble</label>
    <nameField>
        <label>Nombre del Inmueble</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inmuebles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>