Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Area_Util__c.field-meta.xml
<CustomField>
    <fullName>CI_Area_Util__c</fullName>
    <label>Área Útil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>