Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Bloque__c.field-meta.xml
<CustomField>
    <fullName>CI_Bloque__c</fullName>
    <label>Bloque</label>
    <length>10</length>
    <type>Text</type>
</CustomField>