Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Caracteristicas__c.field-meta.xml
<CustomField>
    <fullName>CI_Caracteristicas__c</fullName>
    <label>Características</label>
    <type>TextArea</type>
</CustomField>