Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>CI_Ciudad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Ciudad__c.CI_Pais__r.Name</field>
            <operation>equals</operation>
            <value>ECS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ciudad__c</referenceTo>
    <relationshipLabel>Inmuebles</relationshipLabel>
    <relationshipName>Inmuebles</relationshipName>
    <type>Lookup</type>
</CustomField>