Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Codigo_Catastral__c.field-meta.xml
<CustomField>
    <fullName>CI_Codigo_Catastral__c</fullName>
    <label>Código Catastral</label>
    <length>50</length>
    <type>Text</type>
</CustomField>