Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Codigo_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>CI_Codigo_Inmueble__c</fullName>
    <label>Código de inmueble</label>
    <length>50</length>
    <type>Text</type>
</CustomField>