Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Contratista__c.field-meta.xml
<CustomField>
    <fullName>CI_Contratista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratista</label>
    <referenceTo>Contratista__c</referenceTo>
    <relationshipLabel>Inmuebles</relationshipLabel>
    <relationshipName>Inmuebles</relationshipName>
    <type>Lookup</type>
</CustomField>