Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Estado__c.field-meta.xml
<CustomField>
    <fullName>CI_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Inactiva</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Disponible</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Anulada</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Reservada</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Vendida</label>
            </value>
            <value>
                <fullName>Activa</fullName>
                <isActive>false</isActive>
                <label>Activa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>