Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Etapa__c.field-meta.xml
<CustomField>
    <fullName>CI_Etapa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etapa</label>
    <referenceTo>Urbanizacion__c</referenceTo>
    <relationshipLabel>Inmuebles</relationshipLabel>
    <relationshipName>Inmuebles</relationshipName>
    <type>Lookup</type>
</CustomField>