Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Fecha_Inicio_AO__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Inicio_AO__c</fullName>
    <label>Fecha de Inicio Avance de Obra</label>
    <type>Date</type>
</CustomField>