Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Fecha_Limite_Venta__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Limite_Venta__c</fullName>
    <label>Fecha Límite de Venta</label>
    <type>Date</type>
</CustomField>