Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Forma__c.field-meta.xml
<CustomField>
    <fullName>CI_Forma__c</fullName>
    <label>Forma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>Manual</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Automático</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>