Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Linea_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CI_Linea_Negocio__c</fullName>
    <label>Linea de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>INMUEBLES</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>LOCALES COMERCIALES</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>ESTACIONAMIENTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>