Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Metros_Const__c.field-meta.xml
<CustomField>
    <fullName>CI_Metros_Const__c</fullName>
    <label>Metros de Construcción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>