Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Modelo_Casa__c.field-meta.xml
<CustomField>
    <fullName>CI_Modelo_Casa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo de la Casa</label>
    <referenceTo>Modelo__c</referenceTo>
    <relationshipLabel>Inmuebles</relationshipLabel>
    <relationshipName>Inmuebles</relationshipName>
    <type>Lookup</type>
</CustomField>