Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Moneda__c.field-meta.xml
<CustomField>
    <fullName>CI_Moneda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moneda</label>
    <referenceTo>Moneda__c</referenceTo>
    <relationshipLabel>Inmuebles</relationshipLabel>
    <relationshipName>Inmuebles</relationshipName>
    <type>Lookup</type>
</CustomField>