Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Nombre_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Nombre_Proyecto__c</fullName>
    <label>Nombre del Proyecto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>