Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Planta__c.field-meta.xml
<CustomField>
    <fullName>CI_Planta__c</fullName>
    <label>Planta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>