Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Porcent_Alicuota__c.field-meta.xml
<CustomField>
    <fullName>CI_Porcent_Alicuota__c</fullName>
    <label>Porcentaje Alicuota</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>