Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Porcentaje_Avance__c.field-meta.xml
<CustomField>
    <fullName>CI_Porcentaje_Avance__c</fullName>
    <label>Porcentaje de Avance Obra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>