Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Precio_Actual__c.field-meta.xml
<CustomField>
    <fullName>CI_Precio_Actual__c</fullName>
    <label>Precio Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>