Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Precio_Contado__c.field-meta.xml
<CustomField>
    <fullName>CI_Precio_Contado__c</fullName>
    <label>Precio al Contado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>