Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Prop_Horizontal__c.field-meta.xml
<CustomField>
    <fullName>CI_Prop_Horizontal__c</fullName>
    <label>Propiedad Horizontal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>