Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Inmuebles</relationshipLabel>
    <relationshipName>Inmuebles</relationshipName>
    <type>Lookup</type>
</CustomField>