Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/CI_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Ubicacion__c</fullName>
    <label>Ubicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESQ</fullName>
                <label>ESQUINERA</label>
            </value>
            <value>
                <fullName>MED</fullName>
                <label>MEDIANERA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>