Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/Fecha_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Entrega__c</fullName>
    <label>Fecha de Entrega</label>
    <type>Date</type>
</CustomField>