Inmob-Salesforce/force-app/main/default/objects/Lote__c/fields/ParametroConfigurados__c.field-meta.xml
<CustomField>
    <fullName>ParametroConfigurados__c</fullName>
    <label>Parámetro Configurados</label>
    <summaryForeignKey>CI_ParametroLote__c.CI_Lote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>