Inmob-Salesforce/force-app/main/default/objects/Lote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CI_Nombre_Proyecto__c</columns>
    <columns>CI_Manzana__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CI_Manzana__c</field>
        <operation>contains</operation>
        <value>09</value>
    </filters>
    <filters>
        <field>CI_Nombre_Proyecto__c</field>
        <operation>equals</operation>
        <value>LA GRAN VITTORIA</value>
    </filters>
    <filters>
        <field>CI_Codigo_Inmueble__c</field>
        <operation>contains</operation>
        <value>07</value>
    </filters>
    <label>Todos</label>
</ListView>